モジュール編（Chapter 06-11）: まとめを統一形式に変更、練習問題を全章に追加

--- a/docs-site/docs/06_設定テンプレート.md
+++ b/docs-site/docs/06_設定テンプレート.md
@@ -1089,64 +1089,114 @@ vnet-hub-stg-japaneast
 
 ## まとめ
 
-### このモジュールの全体像
+**config-templatingモジュールの役割**：
 
-!!! success "config-templatingモジュールの役割"
-    **5つのファイルで構成：**
-    
-    1. **terraform.tf**: Terraform 1.12以上、azurerm 4.x以上を要求
-    2. **variables.tf**: 10個の入力変数を定義
-    3. **data.tf**: regionsモジュールとclient_configでデータ取得
-    4. **locals.config.tf**: 10ステップの置換処理
-    5. **outputs.tf**: 置換変数と置換済み設定を出力
+1. **terraform.tf**: Terraform 1.12以上、azurerm 4.x以上を要求
+2. **variables.tf**: 10個の入力変数を定義
+3. **data.tf**: regionsモジュールとclient_configでデータ取得
+4. **locals.config.tf**: 10ステップの置換処理
+5. **outputs.tf**: 置換変数と置換済み設定を出力
 
-### 処理の流れ（完全版）
+**処理の流れ**：
 
-```mermaid
-graph TB
-    A[variables.tf<br/>10個の変数受付] --> B[data.tf<br/>regionsモジュール<br/>client_config]
-    B --> C1[locals: starter_locations]
-    C1 --> C2[locals: starter_locations_short]
-    C2 --> C3[locals: built_in_replacements]
-    C3 --> C4[locals: custom_names]
-    C4 --> C5[locals: custom_name_replacements]
-    C5 --> C6[locals: custom_resource_group_identifiers]
-    C6 --> C7[locals: custom_resource_group_replacements]
-    C7 --> C8[locals: custom_resource_identifiers]
-    C8 --> C9[locals: final_replacements]
-    C9 --> C10[locals: outputs]
-    C10 --> D[outputs.tf<br/>結果出力]
-    
-    style A fill:#e1f5ff
-    style B fill:#fff4e1
-    style C3 fill:#ffe1e1
-    style C5 fill:#ffe1e1
-    style C7 fill:#ffe1e1
-    style C9 fill:#ffe1e1
-    style C10 fill:#e1ffe1
-    style D fill:#e1ffe1
-```
+- regionsモジュールでリージョン情報を取得
+- client_configで現在のAzure認証情報を取得
+- 10ステップの段階的な変数置換を実行
+- 各ステップで前のステップの結果を活用
+- JSON処理でブール値を保護
+- 最終的に全設定ファイルの変数を置換
 
-### 重要なポイント
+**重要なポイント**：
 
-| ポイント | 説明 |
-|---------|------|
-| **段階的処理** | 10ステップで徐々に変数を増やす |
-| **ブール値保護** | JSON処理でtrue/falseを保護 |
-| **階層的置換** | 後の段階で前の変数を参照可能 |
-| **coalesceのフォールバック** | 4段階の優先順位で短縮名を決定 |
-| **for式の活用** | すべての設定に一括処理 |
+- 段階的処理で10ステップの変数置換
+- ブール値はJSON処理で保護（true/falseが文字列にならない）
+- coalesceで4段階のフォールバック（優先順位付き）
+- for式で全設定に一括処理
+- 階層的置換が可能（後の変数が前の変数を参照）
 
+次のChapterでは、リソースグループの作成を見ていきます。実際のAzureリソースを作る最初のステップだよ。
 
 ---
 
-## 次のステップ
+## 練習問題
 
-config-templatingモジュールの全ファイルを完全解説しました！
+理解度チェックです。
 
-次は[07_リソースグループ.md](./07_リソースグループ.md)に進んで、  
-`main.resource.groups.tf`でリソースグループがどう作られるか学びましょう。
+### 問題1
+config-templatingモジュールの主な役割は何ですか？
+
+### 問題2
+以下の変数プレースホルダーは、どのように置換されますか？
+
+```hcl
+location = "$${starter_location_01}"
+```
+
+### 問題3
+`locals.config.tf`で行われる10ステップの処理のうち、最初の3ステップは何をしていますか？
+
+### 問題4
+なぜブール値（true/false）をJSON処理する必要があるのですか？
+
+---
+
+## 練習問題の答え
+
+### 答え1
+config-templatingモジュールの主な役割は、**設定ファイル内の変数プレースホルダー（`$${変数名}`）を実際の値に置換すること**です。
+
+例：
+- `$${starter_location_01}` → `japaneast`
+- `$${subscription_id_management}` → `12345678-1234-1234-1234-123456789012`
+
+これにより、同じテンプレートを使って異なる環境を簡単に構築できます。
+
+### 答え2
+`$${starter_location_01}`は、`variables.tf`で定義された`starter_locations`配列の最初の要素に置換されます。
+
+処理の流れ：
+1. `var.starter_locations = ["japaneast", "japanwest"]`
+2. `local.starter_locations[0] = "japaneast"`
+3. `$${starter_location_01}` → `"japaneast"`
+
+### 答え3
+最初の3ステップは：
+
+**ステップ1: starter_locations**
+- リージョン配列の作成
+- 例：`["japaneast", "japanwest"]`
+
+**ステップ2: starter_locations_short**
+- リージョンの短縮名を決定
+- 例：`["jpe", "jpw"]`
+
+**ステップ3: built_in_replacements**
+- 組み込み変数の置換マップを作成
+- 例：`starter_location_01 = "japaneast"`
+- この段階で30個以上の変数が定義される
+
+### 答え4
+ブール値を通常の文字列置換で処理すると、`true`が`"true"`（文字列）になってしまうからです。
+
+**問題例**：
+```hcl
+enabled = $${some_boolean}
+↓ 通常の置換だと
+enabled = "true"  # ❌ 文字列になる
+```
+
+**JSON処理すると**：
+```hcl
+enabled = $${some_boolean}
+↓ JSON処理で
+enabled = true  # ✅ ブール値のまま
+```
+
+Terraformはブール値と文字列を厳密に区別するため、正しい型を保つ必要があります。
+
+---
 
 **所要時間**: 60分  
-**難易度**: ★★★★★  
+**難易度**: ★★★★☆  
+**前**: [05_ローカル変数.md](./05_ローカル変数.md)  
 **次**: [07_リソースグループ.md](./07_リソースグループ.md)
