--- a/docs-site/docs/07_リソースグループ.md
+++ b/docs-site/docs/07_リソースグループ.md
@@ -964,49 +964,105 @@ viewer@example.com     Reader       /subscriptions/.../rg-app-japaneast
 
 ## まとめ
 
-### リソースグループ作成のポイント
+**リソースグループ作成の役割**：
 
-!!! success "このコードの役割"
-    **3つの主要機能：**
-    
-    1. **公式モジュール使用**: Azure Verified Modulesで安全・確実
-    2. **for_eachループ**: 複数リソースグループを効率的に作成
-    3. **フィルタリング**: `enabled`フラグで柔軟に制御
+1. **公式モジュール使用**: Azure Verified Modulesで安全・確実
+2. **for_eachループ**: 複数リソースグループを効率的に作成
+3. **フィルタリング**: `enabled`フラグで柔軟に制御
 
-### モジュールの構成
+**モジュール構造**：
 
-| ファイル | 役割 | 重要度 |
-|---------|------|--------|
-| **main.tf** | リソース作成 | ★★★★★ |
-| **variables.tf** | 入力変数定義 | ★★★★☆ |
-| **outputs.tf** | 出力定義 | ★★★★☆ |
-| **terraform.tf** | プロバイダー要件 | ★★★☆☆ |
-| **main.telemetry.tf** | テレメトリー | ★★☆☆☆ |
+- **main.resource.groups.tf**: ルートモジュールでfor_eachループ
+- **main.tf**: 公式モジュール呼び出し
+- **variables.tf**: 入力変数定義
+- **outputs.tf**: 作成したリソースグループ情報を出力
+- **terraform.tf**: プロバイダー要件定義
+- **main.telemetry.tf**: テレメトリー送信（オプション）
 
-### リソースグループ作成フロー
+**重要なポイント**：
 
-```mermaid
-graph LR
-    A[設定ファイル] --> B[for_eachフィルタ]
-    B --> C[有効なRGのみ]
-    C --> D[公式モジュール呼び出し]
-    D --> E[main.tf実行]
-    E --> F[リソースグループ作成]
-    
-    style A fill:#e1f5ff
-    style C fill:#fff4e1
-    style F fill:#e8f5e9
-```
+- for_eachで複数リソースグループを一括作成
+- enabled = trueのものだけ作成（フィルタリング）
+- 公式モジュールは内部でazurerm_resource_groupを呼び出す
+- location、tagsなどのパラメータを柔軟に設定
+- テレメトリーで使用状況を追跡（opt-out可能）
+
+次のChapterでは、管理グループとポリシーの構築を見ていきます。ALZの心臓部で、一番複雑だけど超重要なところだよ。
 
 ---
 
-## 次のステップ
+## 練習問題
 
-リソースグループの作成と公式モジュールの内部構造を理解しましたか？
+理解度チェックです。
 
-次は[08_管理グループとポリシーv3.md](./08_管理グループとポリシーv3.md)に進んで、  
-管理グループとポリシーの構築方法を学びましょう。
+### 問題1
+以下のfor_each式は、どのリソースグループを作成しますか？
+
+```hcl
+resource_groups = {
+  connectivity = { enabled = true,  location = "japaneast" }
+  management   = { enabled = true,  location = "japaneast" }
+  identity     = { enabled = false, location = "japaneast" }
+}
+
+for_each = { for k, v in var.resource_groups : k => v if v.enabled }
+```
+
+### 問題2
+Azure Verified Modulesを使うメリットを2つ挙げてください。
+
+### 問題3
+リソースグループの`lock`パラメータで設定できる2つのロックレベルは何ですか？
+
+### 問題4
+テレメトリーを無効化するには、どの変数を`false`に設定すれば良いですか？
+
+---
+
+## 練習問題の答え
+
+### 答え1
+作成されるリソースグループは**2つ**です：
+
+- `connectivity`（enabled = true）✅
+- `management`（enabled = true）✅
+- `identity`（enabled = false）❌ 作成されない
+
+`if v.enabled`のフィルタリングにより、`enabled = true`のものだけが`for_each`に渡されます。
+
+### 答え2
+Azure Verified Modulesのメリット：
+
+1. **セキュリティと品質保証**：Microsoftが公式にレビュー・検証済み
+2. **ベストプラクティス実装**：Azureの推奨設定が自動適用される
+3. **継続的な更新**：Azure APIの変更に自動追従
+4. **テスト済み**：本番環境で使える信頼性
+
+### 答え3
+リソースグループのロックレベルは2種類：
+
+**1. CanNotDelete（削除防止）**：
+- 読み取り・変更：✅ 可能
+- 削除：❌ 不可能
+
+**2. ReadOnly（読み取り専用）**：
+- 読み取り：✅ 可能
+- 変更・削除：❌ 不可能
+
+本番環境では`CanNotDelete`を推奨（変更はできるけど誤削除は防ぐ）。
+
+### 答え4
+テレメトリーを無効化するには：
+
+```hcl
+enable_telemetry = false
+```
+
+を設定します。デフォルトは`true`で、Microsoftにモジュール使用状況が送信されます（個人情報は含まれない）。
+
+---
 
 **所要時間**: 40分  
 **難易度**: ★★★☆☆  
-**次**: [08_管理グループとポリシーv3.md](./08_管理グループとポリシーv3.md)
+**前**: [06_設定テンプレート.md](./06_設定テンプレート.md)  
+**次**: [08_管理グループとポリシー.md](./08_管理グループとポリシー.md)
