--- a/docs-site/docs/08_管理グループとポリシー.md
+++ b/docs-site/docs/08_管理グループとポリシー.md
@@ -729,6 +729,8 @@ https://github.com/Azure/terraform-azurerm-avm-ptn-alz
 - **このリポジトリの `lib/` フォルダ**: カスタム設定（アーキテクチャ定義、アーキタイプのオーバーライド）
 - **GitHub上の公式ALZライブラリ**: ポリシー定義、ポリシーセット定義、ベースアーキタイプ
 
+※このリポジトリはhttps://github.com/shuhei0720org01/alz-mgmtを意味しています。
+
 **公式モジュールのファイル**: `main.tf`
 
 
@@ -759,7 +761,7 @@ data "alz_architecture" "this" {
     }
     ```
     
-    この設定により、**このリポジトリの `lib/` フォルダ**からカスタム定義を読み込みます。
+    この設定により、このリポジトリの `lib/` フォルダからカスタム定義を読み込みます。
     公式のALZライブラリ（GitHubのAzure/Azure-Landing-Zones-Library）は自動的に読み込まれます。
 
 これを使うと：
@@ -2328,21 +2330,135 @@ management_group_settings = {
 
 ## まとめ
 
-このChapterでは、管理グループとポリシーの完全な実装を解説しました。
-
-**学んだこと**:
+**管理グループとポリシーの役割**：
 
 1. **管理グループ階層**: ALZの推奨構造とポリシー継承の仕組み
-2. **設定ファイル**: platform-landing-zone.auto.tfvarsの全533行の意味
-3. **main.management.tf**: countパターンとmovedブロックによる状態管理
-4. **lib/フォルダ**: YAMLによる階層構造とポリシーの定義
-5. **locals.tf**: 依存関係の管理と設定の変換
-6. **ローカルモジュール**: データ変換とパラメータ整形
-7. **公式モジュール**: Azure公式モジュールの内部構造
-8. **公式ALZライブラリ**: Microsoft公式のポリシー定義・アーキタイプの詳細
-9. **実践パターン**: よくあるカスタマイズ方法
+2. **設定ファイル**: platform-landing-zone.auto.tfvarsで一元管理
+3. **YAML定義**: lib/フォルダで階層構造とポリシーを定義
+4. **データ変換**: locals.tfで依存関係を構築
+5. **ローカルモジュール**: パラメータ整形とJSON変換
+6. **公式モジュール**: レベル別の管理グループ作成
+7. **ポリシー管理**: 定義・セット・割り当て・権限を自動化
+8. **公式ALZライブラリ**: Microsoft公式のポリシー定義を活用
+9. **柔軟なカスタマイズ**: オーバーライドでポリシーを調整
 
-**次のChapter**:
+**モジュール構造**：
 
-Chapter 09では、管理リソース（Log Analytics、Automation Account、Data Collection Rules）の実装を解説します。
+- **設定ファイル**: `platform-landing-zone.auto.tfvars`で設定
+- **main.management.tf**: countパターンとmovedブロックで状態管理
+- **lib/フォルダ**: YAMLで階層構造とポリシーを定義
+- **locals.tf**: 依存関係の管理と設定の変換
+- **ローカルモジュール**: `modules/management_groups/`でデータ変換
+- **公式モジュール**: `Azure/avm-ptn-alz/azurerm`でリソース作成
 
+**重要なポイント**：
+
+- 管理グループは階層構造でポリシーを継承（親→子）
+- lib/フォルダでアーキテクチャとアーキタイプを定義
+- ALZ Providerが自動的にYAMLと公式ライブラリを読み込む
+- レベル別に管理グループを作成（Level 0 → 1 → 2...）
+- ポリシーは定義→セット→割り当て→権限の順で作成
+- カスタマイズはアーキタイプのオーバーライドで実現
+
+次のChapterでは、管理リソース（Log Analytics、Automation Account、Data Collection Rules）の実装を見ていきます。これらがポリシーと連携してVMの監視を自動化するよ。
+
+---
+
+## 練習問題
+
+理解度チェックです。
+
+### 問題1
+ALZの管理グループ階層で、`alz`管理グループの直下にある3つの管理グループは何ですか？
+
+### 問題2
+ポリシーの継承について、以下の階層でポリシーAを`platform`に割り当てた場合、どの管理グループに適用されますか？
+
+```
+alz
+├── platform
+│   ├── management
+│   └── connectivity
+└── landingzones
+```
+
+### 問題3
+lib/フォルダの2つのサブフォルダの役割を説明してください。
+
+### 問題4
+ALZ Providerの`data "alz_architecture"`は、どこからYAMLファイルを読み込みますか？（2箇所）
+
+### 問題5
+管理グループを作成する際、なぜLevel 0 → Level 1 → Level 2...の順番で作る必要がありますか？
+
+---
+
+## 練習問題の答え
+
+### 答え1
+`alz`管理グループの直下にある3つの管理グループ：
+
+1. **platform**：共通基盤（management, connectivity, identity）
+2. **landingzones**：アプリ環境（corp, online）
+3. **sandbox**：検証・実験環境
+
+（注：decommissionedもありますが、主要な3つは上記です）
+
+### 答え2
+ポリシーAが適用されるのは：
+
+- `platform` ✅（直接割り当て）
+- `management` ✅（platformの子→継承）
+- `connectivity` ✅（platformの子→継承）
+- `alz` ❌（親には伝播しない）
+- `landingzones` ❌（兄弟には伝播しない）
+
+**ポリシーは親→子へ継承**されますが、逆方向や兄弟への伝播はありません。
+
+### 答え3
+**architecture_definitions/**：
+- 管理グループの階層構造を定義
+- どの管理グループがどこの子かを定義
+- 例：`alz_custom.alz_architecture_definition.yaml`
+
+**archetype_definitions/**：
+- 各管理グループに適用するポリシーをカスタマイズ
+- ベースアーキタイプに対する追加・削除を定義
+- 例：`root_custom.alz_archetype_override.yaml`
+
+### 答え4
+ALZ Providerは**2箇所**からYAMLを読み込みます：
+
+**1. このリポジトリの `lib/` フォルダ**：
+- カスタム設定（アーキテクチャ定義、アーキタイプのオーバーライド）
+- `provider "alz"`の`library_references`で指定
+- 例：`${path.root}/lib`
+
+**2. GitHub上の公式ALZライブラリ**：
+- Microsoft公式のポリシー定義・ポリシーセット・ベースアーキタイプ
+- ALZ Providerが自動的に読み込む
+- 例：`Azure/Azure-Landing-Zones-Library`リポジトリ
+
+### 答え5
+管理グループには**親子関係**があるため、親が存在しないと子を作成できません。
+
+**例**：
+```
+Level 0: alz（親なし）
+  ↓ これを先に作る
+Level 1: platform（親: alz）
+  ↓ alzが存在してから作る
+Level 2: management（親: platform）
+  ↓ platformが存在してから作る
+```
+
+Azure APIは親管理グループのIDを必要とするため、親が存在しない状態で子を作成しようとするとエラーになります。
+
+`depends_on`を使って、Level 0 → Level 1 → Level 2...の順序を保証しています。
+
+---
+
+**所要時間**: 90分  
+**難易度**: ★★★★★  
+**前**: [07_リソースグループ.md](./07_リソースグループ.md)  
+**次**: [09_管理リソース.md](./09_管理リソース.md)
