--- a/docs-site/docs/09_管理リソース.md
+++ b/docs-site/docs/09_管理リソース.md
@@ -1788,6 +1788,86 @@ management_resource_settings = {
 
 ---
 
+## 練習問題
+
+理解度チェックです。
+
+### 問題1
+Log Analytics Workspaceの主な役割は何ですか？
+
+### 問題2
+Data Collection Rules（DCR）の3種類のタイプを挙げてください。
+
+### 問題3
+Managed Identityを使うメリットを2つ挙げてください。
+
+### 問題4
+BYOパターンとは何ですか？どんな時に使いますか？
+
+---
+
+## 練習問題の答え
+
+### 答え1
+Log Analytics Workspaceの主な役割は、**すべてのログとメトリクスを集約する中央集約ストア**です。
+
+具体的には：
+- VM、コンテナ、Azureサービスからのログを収集
+- 長期保存（デフォルト30日、最大730日）
+- KQLクエリで分析・検索
+- Azure MonitorやSentinelのデータソース
+
+### 答え2
+Data Collection Rules（DCR）の3種類：
+
+**1. Change Tracking DCR**：
+- ファイル変更、レジストリ変更、サービス変更を監視
+- セキュリティ監査に使用
+
+**2. VM Insights DCR**：
+- CPU、メモリ、ディスク、ネットワークのパフォーマンス監視
+- プロセス・依存関係の可視化
+
+**3. Defender for SQL DCR**：
+- SQL Server on VMのセキュリティ監視
+- 脆弱性評価、脅威検出
+
+### 答え3
+Managed Identityのメリット：
+
+**1. パスワード不要**：
+- 認証情報をコードに埋め込まない
+- シークレット管理の手間が不要
+- 漏洩リスクがゼロ
+
+**2. 自動ローテーション**：
+- Azureが自動的に認証情報を更新
+- 証明書の期限切れの心配なし
+- セキュリティポリシーに準拠
+
+**3. きめ細かいアクセス制御**：
+- RBACで必要最小限の権限を付与
+- リソース単位で権限を制御
+
+### 答え4
+BYO（Bring Your Own）パターンは、**既存のリソースを再利用するパターン**です。
+
+**例**：
+```hcl
+log_analytics_workspace = {
+  enabled      = false  # 新規作成しない
+  existing_resource_id = "/subscriptions/.../workspaces/law-existing-001"
+}
+```
+
+**使う場面**：
+- 既存環境に追加デプロイする時
+- 他チームと共有リソースを使う時
+- コスト削減のため（新規作成を避ける）
+- 既存のログデータを維持したい時
+
+---
+
 **所要時間**: 60分  
 **難易度**: ★★★★☆  
 **前**: [08_管理グループとポリシー.md](./08_管理グループとポリシー.md)  
