モジュール編: フォーマット微調整

--- a/docs-site/docs/08_管理グループとポリシー.md
+++ b/docs-site/docs/08_管理グループとポリシー.md
@@ -2360,7 +2360,6 @@ management_group_settings = {
 - ポリシーは定義→セット→割り当て→権限の順で作成
 - カスタマイズはアーキタイプのオーバーライドで実現
 
-次のChapterでは、管理リソース（Log Analytics、Automation Account、Data Collection Rules）の実装を見ていきます。これらがポリシーと連携してVMの監視を自動化するよ。
 
 ---
 
@@ -2413,34 +2412,38 @@ ALZ Providerの`data "alz_architecture"`は、どこからYAMLファイルを読
 - `alz` ❌（親には伝播しない）
 - `landingzones` ❌（兄弟には伝播しない）
 
-**ポリシーは親→子へ継承**されますが、逆方向や兄弟への伝播はありません。
+ポリシーは親→子へ継承されますが、逆方向や兄弟への伝播はありません。
 
 ### 答え3
 **architecture_definitions/**：
+
 - 管理グループの階層構造を定義
 - どの管理グループがどこの子かを定義
 - 例：`alz_custom.alz_architecture_definition.yaml`
 
 **archetype_definitions/**：
+
 - 各管理グループに適用するポリシーをカスタマイズ
 - ベースアーキタイプに対する追加・削除を定義
 - 例：`root_custom.alz_archetype_override.yaml`
 
 ### 答え4
-ALZ Providerは**2箇所**からYAMLを読み込みます：
+ALZ Providerは2箇所からYAMLを読み込みます：
 
 **1. このリポジトリの `lib/` フォルダ**：
+
 - カスタム設定（アーキテクチャ定義、アーキタイプのオーバーライド）
 - `provider "alz"`の`library_references`で指定
 - 例：`${path.root}/lib`
 
 **2. GitHub上の公式ALZライブラリ**：
+
 - Microsoft公式のポリシー定義・ポリシーセット・ベースアーキタイプ
 - ALZ Providerが自動的に読み込む
 - 例：`Azure/Azure-Landing-Zones-Library`リポジトリ
 
 ### 答え5
-管理グループには**親子関係**があるため、親が存在しないと子を作成できません。
+管理グループには親子関係があるため、親が存在しないと子を作成できません。
 
 **例**：
 ```
@@ -2455,6 +2458,10 @@ Level 2: management（親: platform）
 Azure APIは親管理グループのIDを必要とするため、親が存在しない状態で子を作成しようとするとエラーになります。
 
 `depends_on`を使って、Level 0 → Level 1 → Level 2...の順序を保証しています。
+
+---
+
+次のChapterでは、管理リソース（Log Analytics、Automation Account、Data Collection Rules）の実装を見ていきます。これらがポリシーと連携してVMの監視を自動化するよ。
 
 ---
 
